data/derived/sp14/progs/unify/prog3349.ml.out
Characters 16-20:
  let _ = bigMul [0,99] [];;
                  ^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type int
